--- a/index.html
+++ b/index.html
@@ -4,9 +4,99 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Virtual Keyboard</title>
   </head>
   <body>
+    <section class="keyboard-app">
+      <div class="description">
+        <span class="description__item">
+          Клавиатура создана в операционной системе Windows.
+        </span>
+        <span class="description__item">
+          Для переключения языка используйте комбинацию Ctrl + Alt
+        </span>
+      </div>
+      <textarea class="textarea"></textarea>
+      <div class="keyboard">
+        <div class="keyboard__keys">
+          <div class="keyboard__row">
+            <div class="keys esc-key">Esc</div>
+            <div class="keys">`</div>
+            <div class="keys">1</div>
+            <div class="keys">2</div>
+            <div class="keys">3</div>
+            <div class="keys">4</div>
+            <div class="keys">5</div>
+            <div class="keys">6</div>
+            <div class="keys">7</div>
+            <div class="keys">8</div>
+            <div class="keys">9</div>
+            <div class="keys">0</div>
+            <div class="keys">-</div>
+            <div class="keys">=</div>
+            <div class="keys backspace-key">Backspace</div>
+          </div>
+          <div class="keyboard__row">
+            <div class="keys tab-key">Tab</div>
+            <div class="keys">Q</div>
+            <div class="keys">W</div>
+            <div class="keys">E</div>
+            <div class="keys">R</div>
+            <div class="keys">T</div>
+            <div class="keys">Y</div>
+            <div class="keys">U</div>
+            <div class="keys">I</div>
+            <div class="keys">O</div>
+            <div class="keys">P</div>
+            <div class="keys">{</div>
+            <div class="keys">}</div>
+            <div class="keys slash-key">\</div>
+          </div>
+          <div class="keyboard__row">
+            <div class="keys capslock-key">Caps Lock</div>
+            <div class="keys">A</div>
+            <div class="keys">S</div>
+            <div class="keys">D</div>
+            <div class="keys">F</div>
+            <div class="keys">G</div>
+            <div class="keys">H</div>
+            <div class="keys">J</div>
+            <div class="keys">K</div>
+            <div class="keys">L</div>
+            <div class="keys">;</div>
+            <div class="keys">"</div>
+            <div class="keys enter-key">Enter</div>
+          </div>
+          <div class="keyboard__row">
+            <div class="keys shift-key shift-left">Shift</div>
+            <div class="keys">Z</div>
+            <div class="keys">X</div>
+            <div class="keys">C</div>
+            <div class="keys">V</div>
+            <div class="keys">B</div>
+            <div class="keys">N</div>
+            <div class="keys">M</div>
+            <div class="keys">,</div>
+            <div class="keys">.</div>
+            <div class="keys">/</div>
+            <div class="keys up-arrow-key">&uarr;</div>
+            <div class="keys shift-key shift-right">Shift</div>
+          </div>
+          <div class="keyboard__row">
+            <div class="keys ctrl-key ctrl-left">Ctrl</div>
+            <div class="keys win-key">Win</div>
+            <div class="keys alt-key alt-left">Alt</div>
+            <div class="keys space-key"></div>
+            <div class="keys alt-key alt-right">Alt</div>
+            <div class="keys left-arrow-key">&larr;</div>
+            <div class="keys down-arrow-key">&darr;</div>
+            <div class="keys right-arrow-key">&rarr;</div>
+            <div class="keys ctrl-key ctrl-right">Ctrl</div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script/index.js"></script>
   </body>
 </html>
