feat: add function for elements render

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Virtual Keyboard</title>
   </head>
-  <body>
+  <body class="body">
     <!--<section class="keyboard-app">
       <div class="description">
         <span class="description__item">
