feat: implement modular structure in project

--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@
         </div>
       </div>
     </section>-->
-    <script src="script/index.js"></script>
+    <script src="script/index.js" type="module"></script>
   </body>
 </html>
